apps/vikunja/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vikunja-allow-ingress
  namespace: vikunja
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: vikunja
      app.kubernetes.io/name: vikunja
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflare-tunnel-ingress-controller
      ports:
        - protocol: TCP
          port: 3456
